# DeepQuest

./: .claudeignore  .gitignore  .gitmodules  .mcp.json  AGENTS.md  Makefile  README.md  available_replica=4.sh  web-build-env.txt
.claude/agents/: agent-expert.md  ai-engineer.md
.claude/commands/: core-doc-injector.md  create-git-issue.md  create-issue.md  speckit.specify.md
.codex/skills/check-troubleshooting/: SKILL.md
.codex/skills/create-runbook/: SKILL.md
.codex/skills/evaluate-implementation/: SKILL.md
.codex/skills/gemini-prompting/: SKILL.md
.codex/skills/langgraph-stream-integration/: SKILL.md
.codex/skills/new-status/: SKILL.md
.codex/skills/plan-task/: SKILL.md
.codex/skills/prisma-v7/: SKILL.md
.codex/skills/sync-repo-workflows/: SKILL.md
.codex/skills/update-architecture/: SKILL.md
.codex/skills/update-status/: SKILL.md
.codex/skills/update-task/: SKILL.md
.codex/skills/update-troubleshooting/: SKILL.md
.codex/skills/web-performance-patterns/: SKILL.md
.codex/skills/web-server-architecture/: SKILL.md
.cursor/rules/: infra-k8s-overlay.mdc
.github/hooks/: README.md  install.sh  post-checkout
.github/workflows/: claude-code-review.yml
.serena/: project.yml
.serena/memories/: ai_server_tech_stack.md  development_conventions.md  frontend_tech_stack.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
agent-template/: README.md
agent-template/infra/: AGENTS.md
agent-template/infra/docs/: README.md  infrastructure.md
agent-template/root/: AGENTS.md
agent-template/root/docs/: README.md  architecture.md
ai/: .env.example  .gitignore  Makefile  langgraph.json  pyproject.toml
ai/.claude/: CLAUDE.md
ai/.claude/commands/: improve-prompt.md
ai/.claude/rules/: development-commands.md  langgraph-development.md  prompting-guide.md
ai/.claude/skills/gemini-prompting/: SKILL.md
ai/.claude/skills/gemini-prompting/references/: gemini-guide.md
ai/.serena/: project.yml
ai/.serena/memories/: code_style_conventions.md  graph_structure_pattern.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
ai/docs/: gemini-prompting-schema.md  jd_parser_requirements.md
ai/src/common/: rate_limit.py  state_model.py  types.py
ai/src/common/schemas/: __init__.py  project.py  question.py  question_category.py  structured_jd.py
ai/src/graphs/jd_structuring/: __init__.py  configuration.py  graph.py  nodes.py  prompts.py  state.py
ai/src/graphs/jd_to_text/: __init__.py  graph.py  nodes.py  prompts.py  state.py
ai/src/graphs/question_feedback_gen/: configuration.py  convert.py  graph.py  nodes.py  prompts.py  schema.py  state.py
ai/src/graphs/question_gen/: __init__.py  configuration.py  graph.py  helpers.py  nodes.py  prompts.py  schema.py  state.py
ai/src/graphs/resume_parser/: __init__.py  configuration.py  graph.py  nodes.py  prompts.py  schema.py  state.py
ai/src/utils/: __init__.py
ai/tests/integration_tests/: test_graph.py  test_question_feedback_gen_streaming.py
ai/tests/unit_tests/: test_configuration.py
bkit-templete/: README.md
bkit-templete/docs/: current-infra-integration.md  file-map.md  root-application-expansion.md
bkit-templete/project-root/: .bkit.env.template
common-contents/question-categories/: README.md
docs/: README.md  architecture.md  prd.md
docs(haru2)/: README.md  architecture.md
docs(haru2)/reference/: README.md  application-code-change-summary.md  application-dev-vs-prod.md  application-source-of-truth.md  application-workflow-from-idea-to-operation.md  document-writing-rules.md  operational-notes.md  repo-workflow-parity.md
docs(haru2)/runbooks/: README.md
docs(haru2)/status/: README.md  status-2026-02-08-2026-03-28-app-flow.md  status-2026-03-27.md  status-2026-04-23.md
docs(haru2)/tasks/: README.md  task-2026-03-27.md  task-2026-04-23.md
docs(haru2)/troubleshooting/: README.md  SENTRY_ANALYTICS_NOISE.md
docs(smart-cau)/: architecture.md
docs(smart-cau)/common-contents/question-categories/: category-update.md
docs(smart-cau)/v2/: prd.md
docs-lagacy/common/product-development/: product-sketch.md
docs-lagacy/core-values/: ai-persona-ember.md
docs-lagacy/troubleshooting/: CLERK_WEBHOOK_USER_SYNC.md
docs/common/: serena-mcp-guide.md
docs/common/product-development/: ia-feedback.md  information-architecture.md  prd.md
docs/core-values/: 2026-plan.md  READEME.md  service-core-philosophy.md
docs/reference/: README.md  application-code-change-summary.md  application-dev-vs-prod.md  document-writing-rules.md  repo-workflow-parity.md
docs/retrospectives/: post-deploy-improvements.md
docs/runbooks/: README.md
docs/status/: README.md  status-2026-03-27.md
docs/tasks/: README.md  task-2026-03-27.md
docs/troubleshooting/: CLERK_WEBHOOK_USER_SYNC.md  README.md
evidence/: README_portfolio_draft.md
evidence/concurrent_max=40/: README.md
evidence/keda/: README.md
infra/: .bkit.env.example  .gitignore  AGENTS.md  Jenkinsfile
infra/docker/: README.md  docker-compose.yml  env.template  start-all.sh  stop-all.sh
infra/docker/ai/: Dockerfile  README.md  (+2 more)
infra/docs/: README.md  infrastructure.md
infra/docs-infra/: RPS_테스트_전_최종_생각정리.md  앤서블_자동화_예정.md  인프라_dev_prod.md  트러블슈팅.md
infra/k8s/: README.md  yaml
infra/scripts/: verify-session-affinity.sh
lagacy/: CLAUDE.md
lagacy(smart-cau)/: README.original.md
scripts/collect/: README.md
specs/001-experience-importance-visualization/: data-model.md  plan.md  quickstart.md  research.md  review.md  spec.md  tasks.md
web/: .claudeignore  .env.example  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc  README.md  eslint.config.mjs  next.config.ts  package.json  prisma.config.ts  sentry.common.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
web/.claude/: CLAUDE.md  settings.json
web/.serena/: project.yml
web/prisma/: schema.prisma
web/public/: about.txt  site.webmanifest
web/src/: instrumentation-client.ts  proxy.ts
web/supabase/: config.toml
(+720 files in other folders)
